cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_395.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/evp/pmeth_lib.c:585: error: DEAD_STORE
  The value written to &p (type ossl_param_st*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/evp/pmeth_lib.c:585:6: Write of unused value
583.       *p++ = OSSL_PARAM_construct_size_t(OSSL_SIGNATURE_PARAM_DIGEST_SIZE,
584.                                          &mdsize);
585.       *p++ = OSSL_PARAM_construct_end();
            ^
586.   
587.       return EVP_PKEY_CTX_set_params(ctx, sig_md_params);
